--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,5 +15,5 @@ services:
       dockerfile: Dockerfile.dev
     volumes:
       - /app/node_modules
-      # - .:/app
+      - .:/app
     command: ["npm", "run", "test"]
